<resources>
    <string name="app_name">Pokedex</string>
    <string name="buscar_menu_option">Buscar</string>
    <string name="adicionar_novo_pokemon_menu">Adicionar novo pokémon</string>
    <string name="pokemonPhotoDescription">Foto do Pokémon:</string>
    <string name="numero_do_pokemon_edittext">Numero do Pokémon:</string>
    <string name="nome_do_pokemon_edittext">Nome do Pokémon:</string>
    <string name="url_da_foto_edittext">URL da Foto:</string>
    <string name="url_do_primeiro_tipo_edittext">URL do Primeiro Tipo:</string>
    <string name="url_do_segundo_tipo_edittext">URL do Segundo Tipo(Opcional):</string>
    <string name="descricao_do_pokemon_edittext">Descrição do Pokémon:</string>
</resources>